discussion/kv_engine/157877/157877_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Move to event-driven checkpoint removal task

Separates routine removal of unreffed checkpoints from "emergency"
memory recovery methods like cursor dropping and expelling.

Now, once a checkpoint becomes unreferenced, the checkpoint removal
task can be notified. The task tracks vbs to visit in a VBReadyQueue,
so does not need to scan every vb each run.

Change-Id: Ibf12fe5ca11ffd4daf9fcd2de3ae9e7010256e61

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-07-22 10:39:50.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-22 11:00:24.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37965/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_test.cc(26): fatal error C1083: Cannot open include file: "checkpoint_remover.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37965/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10771/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:23:10: error: "checkpoint_remover.h" file not found [clang-diagnostic-error]
#include "checkpoint_remover.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10771/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:23:10:
error: "checkpoint_remover.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10771/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/385/ : FAILURE

Compile error at [2021-07-22T10:50:04.544Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/385/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12532/ : FAILURE

Compile error at [2021-07-22T10:56:42.680Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12532/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12356/ : FAILURE

Compile error at [2021-07-22T10:52:51.961Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12356/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12879/ : FAILURE

Compile error at [2021-07-22T10:55:36.129Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12879/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11441/ : FAILURE

Compile error at [2021-07-22T10:45:43.106Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: "checkpoint_remover.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20429/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/357/ : FAILURE

Compile error at [2021-07-22T10:48:18.760Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:26:10:
fatal error: checkpoint_remover.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/357/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9429/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32367/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
